Adicionando elemento input ao header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Alura DEV</title>
 </head>
 <body>
+    <header>
+        <img src="./Header/Logo.svg" alt="Logo do website Alura DEV" />
+        <input type="text" placeholder="Busque por algo" />
+    </header>
     
 </body>
 </html>
