Estruturando a área de foto e nome do user dentro do header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <header>
-        <img src="./Header/Logo.svg" alt="Logo do website Alura DEV" />
+        <img src="./header/Logo.svg" alt="Logo do website Alura DEV" />
+        
         <input type="text" placeholder="Busque por algo" />
+
+        <div>
+            <img src="./header/Photo.svg" alt="Foto de perfil do usuário" />
+            <span>James Mayke</span>
+        </div>
     </header>
     
 </body>
