Adicionando sessão aside dos links da página do projeto

--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
             <span>James Mayke</span>
         </div>
     </header>
+
+    <aside>
+        <h2>Menu</h2>
+        <ul>
+            <li>
+                <a href="./index.html">
+                    <img src="./icons/editor.svg" alt="Ícone para a sessão: Editor de código" />
+                    Editor de código
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="./icons/comunidade.svg" alt="Ícone para a sessão: Comunidade" />
+                    Comunidade
+                </a>
+            </li>
+        </ul>
+    </aside>
     
 </body>
 </html>
