Adicionando sessão para  formulário do projeto

--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@
             </li>
         </ul>
     </aside>
+
+    <section>
+        <form>
+            <div>
+                <h2>Seu projeto</h2>
+                <input type="text" name="" id="" placeholder="Nome do seu projeto" />
+                <textarea name="" id="" cols="30" rows="10" placeholder="Descrição do seu projeto"></textarea>
+            </div>
+
+            <div>
+                <h2>Personalização</h2>
+                <select name="" id="">
+                    <option value="">JavaScript</option>
+                    <option value="">HTML</option>
+                    <option value="">CSS</option>
+                </select>
+            </div>
+        </form>
+    </section>
     
 </body>
 </html>
