Adicionando input de cor e botão de submit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
                     <option value="">HTML</option>
                     <option value="">CSS</option>
                 </select>
+
+                <input type="color" name="" id="">
             </div>
+
+            <button type="submit">Salvar projeto</button>
         </form>
     </section>
     
