Criação da área main do projeto com campo de texto e button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
         </ul>
     </aside>
 
+    <main>
+        <div>
+            <span></span>
+            <span></span>
+            <span></span>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </div>
+        <button>Visualizar com o highlight</button>
+    </main>
+
     <section>
         <form>
             <div>
