Adicionando classe no header

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header class="header">
             <img src="./header/Logo.svg" alt="Logo do website Alura DEV" />
             
-            <input class="search-anything" type="text" placeholder="Busque por algo" />
+            <input class="header-search-anything" type="text" placeholder="Busque por algo" />
 
-            <div>
+            <div class="header-user">
                 <img src="./header/Photo.svg" alt="Foto de perfil do usuário" />
                 <span>James Mayke</span>
             </div>
