Alterando estrutura html da main

--- a/index.html
+++ b/index.html
@@ -42,14 +42,16 @@
                 </ul>
             </aside>
     
-            <main>
-                <div>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+            <main class="main">
+                <div class="main-container-code-editor">
+                    <div class="main-container-decorator">
+                        <span class="main-code-editor-decoration-red"></span>
+                        <span class="main-code-editor-decoration-yellow"></span>
+                        <span class="main-code-editor-decoration-green"></span>
+                    </div>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
                 </div>
-                <button>Visualizar com o highlight</button>
+                <button class="main-button-highlight">Visualizar com o highlight</button>
             </main>
     
             <section>
