Organizando sessnao dos projetos

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </main>
     
             <section>
-                <form>
-                    <div>
+                <form class="form-project">
+                    <div class="form-project-info">
                         <h2>Seu projeto</h2>
                         <input type="text" name="" id="" placeholder="Nome do seu projeto" />
                         <textarea name="" id="" cols="30" rows="10" placeholder="Descrição do seu projeto"></textarea>
